Use blurred images, prevent modal from taking full screen width

--- a/src/components/questionnaire.module.scss
+++ b/src/components/questionnaire.module.scss
@@ -1,4 +1,5 @@
 @use '../styles/base';
+@use '../styles/base/mixins';
 @use '../styles/config';
 
 .overlay {
@@ -15,7 +16,7 @@
 .modal {
     position: absolute;
     top: 150px;
-    max-width: 960px;
+    max-width: calc(100% - 20px);
     max-height: calc(100% - 200px);
 
     outline: none;
@@ -24,6 +25,10 @@
     
     background: config.$colors-white none repeat scroll 0% 0%;
     overflow: auto;
+
+    @include mixins.desktop {
+        max-width: 1000px;
+    }
 }
 
 .modalHeader {
