--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -28,3 +28,9 @@
         @content;
     }
 }
+
+@mixin desktop {
+    @media (min-width: 1024px) {
+        @content;
+    }
+}
